{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 339,
  "lineage": "8b6403b3-e02d-5248-8996-ba4e769494a0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132801647717:vpc/vpc-08202ec2dc0a1fe7e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f31162d184904359",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-dda9babf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08202ec2dc0a1fe7e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06c2a18f1e2f28a34",
            "owner_id": "132801647717"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab806066660e1937",
            "arn": "arn:aws:ec2:us-east-1:132801647717:instance/i-01183e14466404ce9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "space-captain-ec2-profile",
            "id": "i-01183e14466404ce9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "space-captain-key-132801647717",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079731cdf5189a965",
            "private_dns": "ip-172-31-8-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.17",
            "public_dns": "ec2-3-234-177-166.compute-1.amazonaws.com",
            "public_ip": "3.234.177.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a283ba57db75248f",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "space-captain-server-20250713222434407300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e603d22756533b4",
            "tags": {
              "Name": "space-captain-server",
              "Type": "server",
              "space-captain-server": "true"
            },
            "tags_all": {
              "Name": "space-captain-server",
              "Type": "server",
              "space-captain-server": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f67138651648360b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_access",
            "aws_key_pair.space_captain",
            "aws_security_group.server",
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "telemetry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab806066660e1937",
            "arn": "arn:aws:ec2:us-east-1:132801647717:instance/i-0c42885bf541f0059",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "space-captain-ec2-profile",
            "id": "i-0c42885bf541f0059",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "space-captain-key-132801647717",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e094163ade29be1e",
            "private_dns": "ip-172-31-10-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.62",
            "public_dns": "ec2-44-222-152-136.compute-1.amazonaws.com",
            "public_ip": "44.222.152.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0abef634f20e9ddd6",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "space-captain-telemetry-20250713222434408000000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e603d22756533b4",
            "tags": {
              "Name": "space-captain-telemetry",
              "Type": "telemetry",
              "space-captain-telemetry": "true"
            },
            "tags_all": {
              "Name": "space-captain-telemetry",
              "Type": "telemetry",
              "space-captain-telemetry": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aea95cf381f5df05"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_access",
            "aws_key_pair.space_captain",
            "aws_security_group.telemetry",
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132801647717:security-group/sg-0fbb41031fb857568",
            "description": "Security group for Space Captain clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbb41031fb857568",
            "ingress": [
              {
                "cidr_blocks": [
                  "216.173.146.119/32"
                ],
                "description": "SSH access from my IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "space-captain-client-20250713222434408000000003",
            "name_prefix": "space-captain-client-",
            "owner_id": "132801647717",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08202ec2dc0a1fe7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132801647717:security-group/sg-0f67138651648360b",
            "description": "Security group for Space Captain server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f67138651648360b",
            "ingress": [
              {
                "cidr_blocks": [
                  "216.173.146.119/32"
                ],
                "description": "SSH access from my IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "space-captain-server-20250713222434407300000001",
            "name_prefix": "space-captain-server-",
            "owner_id": "132801647717",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08202ec2dc0a1fe7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "telemetry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132801647717:security-group/sg-0aea95cf381f5df05",
            "description": "Security group for Space Captain telemetry",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aea95cf381f5df05",
            "ingress": [
              {
                "cidr_blocks": [
                  "216.173.146.119/32"
                ],
                "description": "SSH access from my IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "space-captain-telemetry-20250713222434408000000002",
            "name_prefix": "space-captain-telemetry-",
            "owner_id": "132801647717",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08202ec2dc0a1fe7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server_game_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Game traffic from clients",
            "from_port": 19840,
            "id": "sgrule-2598036998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0f67138651648360b",
            "security_group_rule_id": "sgr-09e4f2d29c2e8262d",
            "self": false,
            "source_security_group_id": "sg-0fbb41031fb857568",
            "timeouts": null,
            "to_port": 19840,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.client",
            "aws_security_group.server",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server_game_traffic_telemetry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Game traffic from telemetry",
            "from_port": 19840,
            "id": "sgrule-2873901023",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0f67138651648360b",
            "security_group_rule_id": "sgr-0712e1c8947b14e40",
            "self": false,
            "source_security_group_id": "sg-0aea95cf381f5df05",
            "timeouts": null,
            "to_port": 19840,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.server",
            "aws_security_group.telemetry",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "telemetry_prometheus_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Prometheus access from clients",
            "from_port": 9090,
            "id": "sgrule-4284417294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aea95cf381f5df05",
            "security_group_rule_id": "sgr-0e2594b5b246ef3d4",
            "self": false,
            "source_security_group_id": "sg-0fbb41031fb857568",
            "timeouts": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.client",
            "aws_security_group.telemetry",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "telemetry_prometheus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Prometheus access from server",
            "from_port": 9090,
            "id": "sgrule-246371163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aea95cf381f5df05",
            "security_group_rule_id": "sgr-0af40a493bd8d25e0",
            "self": false,
            "source_security_group_id": "sg-0f67138651648360b",
            "timeouts": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.server",
            "aws_security_group.telemetry",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}